--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -2,15 +2,16 @@
 
 <h1>Teachers</h1>
 
-<table>
+<table class="table table-dark">
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Phone</th>
-      <th>Email</th>
-      <th>Gender</th>
-      <th>Date of birth</th>
+      <th scope="col">#</th>
+      <th scope="col">First name</th>
+      <th scope="col">Last name</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Email</th>
+      <th scope="col">Gender</th>
+      <th scope="col">Date of birth</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
   <tbody>
     <% @teachers.each do |teacher| %>
       <tr>
+        <th scope="row"><%= teacher.id %></th>
         <td><%= teacher.first_name %></td>
         <td><%= teacher.last_name %></td>
         <td><%= teacher.phone %></td>
@@ -34,4 +36,4 @@
 
 <br>
 
-<%= link_to 'New Teacher', new_teacher_path %>
+<%= link_to 'New Teacher', new_teacher_path, class: "btn btn-outline-primary" %>
