--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -2,31 +2,35 @@
 
 <h1>Teachers</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
+      <th>#</th>
       <th>First name</th>
       <th>Last name</th>
       <th>Phone</th>
       <th>Email</th>
       <th>Gender</th>
       <th>Date of birth</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @teachers.each do |teacher| %>
+    <% @teachers.each_with_index do |teacher, index| %>
       <tr>
+        <td><%= index + 1 %></td>
         <td><%= teacher.first_name %></td>
         <td><%= teacher.last_name %></td>
         <td><%= teacher.phone %></td>
         <td><%= teacher.email %></td>
         <td><%= teacher.gender %></td>
         <td><%= teacher.date_of_birth %></td>
-        <td><%= link_to 'Show', teacher %></td>
-        <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
-        <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td align="right">
+          <%= link_to 'Show', teacher, class: "btn btn-primary" %>
+          <%= link_to 'Edit', edit_teacher_path(teacher), class: "btn btn-primary" %>
+          <%= link_to 'Destroy', teacher, class: "btn btn-primary", method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +38,4 @@
 
 <br>
 
-<%= link_to 'New Teacher', new_teacher_path %>
+<%= link_to 'New Teacher', new_teacher_path, class: "btn btn-outline-dark" %>
