--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', teacher: @teacher %>
 
-<%= link_to 'Back', teachers_path %>
+<%= link_to 'Back', teachers_path, class: "btn btn-outline-primary", style: "margin-top: 20px" %>
