--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -13,6 +13,9 @@
         <li class="nav-item <%= 'active' if current_page?(teachers_path) %>">
           <%= link_to "Teachers", teachers_path, class: "nav-link" %>
         </li>
+        <li class="nav-item <%= 'active' if current_page?(students_path) %>">
+          <%= link_to "Students", students_path, class: "nav-link" %>
+        </li>
       </ul>
     </div>
   </nav>
