home work week 2

--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,18 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <%= link_to "Krobei", root_path, class: "navbar-brand" %>
-    
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <%= link_to 'Krobei',root_path ,class: "navbar-brand" %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item <%= 'active' if current_page?(root_path) %>">
-          <%= link_to "Home", root_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item <%= 'active' if current_page?(teachers_path) %>">
-          <%= link_to "Teachers", teachers_path, class: "nav-link" %>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item <%= "active" if current_page?(root_path)%>">
+        <%= link_to 'home',root_path,class: "nav-link" %>
+      </li>
+      <li class="nav-item <%= "active" if current_page?(teachers_path)%>">
+        <%= link_to 'teachers',teachers_path,class: "nav-link" %>
+      </li>
+       <li class="nav-item <%= "active" if current_page?(students_path)%>">
+        <%= link_to 'students',students_path,class: "nav-link" %>
+      </li>
+    </ul>
+  </div>
+</nav>
