--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,8 @@
- @import "bootstrap";
+@import 'bootstrap';
+.new-button {
+  margin-bottom: 10px;
+  margin-left: 20px;
+}
+.margin-bottom {
+  margin-bottom: 10px;
+}
