--- a/app/views/teachers/new.html.erb
+++ b/app/views/teachers/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form', teacher: @teacher %>
 
-<%= link_to 'Back', teachers_path %>
+<div class="container text-center">
+  <%= link_to 'Back', teachers_path,class: "btn btn-primary" %>
+</div>
