--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,52 +1,63 @@
 <div class="row">
   <div class="col-md-4 offset-4">
-    <%= form_with(model: teacher, local: true) do |form| %>
-      <% if teacher.errors.any? %>
+    <%= form_with(model: student, local: true) do |form| %>
+      <% if student.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
-
+          <h2><%= pluralize(student.errors.count, "error") %> prohibited this student from being saved:</h2>
+    
           <ul>
-          <% teacher.errors.full_messages.each do |message| %>
+          <% student.errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
           </ul>
         </div>
       <% end %>
-
+    
       <div class="form-group">
         <%= form.label :first_name %>
         <%= form.text_field :first_name, class: 'form-control' %>
       </div>
-
+    
       <div class="form-group">
         <%= form.label :last_name %>
         <%= form.text_field :last_name, class: 'form-control' %>
       </div>
-
+    
       <div class="form-group">
         <%= form.label :phone %>
         <%= form.text_field :phone, class: 'form-control' %>
       </div>
-
+    
+      <div class="form-group">
+        <%= form.label :parents_phone %>
+        <%= form.text_field :parents_phone, class: 'form-control' %>
+      </div>
+    
       <div class="form-group">
         <%= form.label :email %>
         <%= form.text_field :email, class: 'form-control' %>
       </div>
-
+    
       <div class="form-group">
         <%= form.label :gender %>
         <%= form.text_field :gender, class: 'form-control' %>
       </div>
-
+    
       <div class="form-group">
         <%= form.label :date_of_birth %>
         <%= form.date_select :date_of_birth, class: 'form-control' %>
       </div>
-
+      <div class="field">
+        <%= form.label :active %>
+        <%= form.check_box :active %>
+      </div>
+    
       <div class="actions">
-        <%= form.submit teacher.id.present? ? 'Update' : 'Create', class: 'btn btn-primary' %>
-        <%= link_to 'Back', teachers_path, class: 'btn btn-secondary' %>
+        <%= form.submit student.id.present? ? 'Update' : 'Create', class: 'btn btn-primary' %>
+        <%= link_to 'Back', students_path, class: 'btn btn-secondary' %>
       </div>
     <% end %>
   </div>
 </div>
+<br>
+<br>
