--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,34 +1,28 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>First name:</strong>
-  <%= @teacher.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @teacher.last_name %>
-</p>
-
-<p>
-  <strong>Phone:</strong>
-  <%= @teacher.phone %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @teacher.email %>
-</p>
-
-<p>
-  <strong>Gender:</strong>
-  <%= @teacher.gender %>
-</p>
-
-<p>
-  <strong>Date of birth:</strong>
-  <%= @teacher.date_of_birth %>
-</p>
-
-<%= link_to 'Edit', edit_teacher_path(@teacher) %> |
-<%= link_to 'Back', teachers_path %>
+<div class="row">
+  <div class="col-md-4 offset-4">
+    <div class="card" style="width: 100%;">
+      <div class="card-header">
+        <center><b><%= "#{@teacher.first_name} #{@teacher.last_name}" %></b></center>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          Phone: <span style="float: right"><%= @teacher.phone %></span>
+        </li>
+        <li class="list-group-item">
+          Email: <span style="float: right"><%= @teacher.email %></span>
+        </li>
+        <li class="list-group-item">
+          Gender: <span style="float: right"><%= @teacher.gender %></span>
+        </li>
+        <li class="list-group-item">
+          Date of birth: <span style="float: right"><%= @teacher.date_of_birth %></span>
+        </li>
+      </ul>
+      <div class="card-body">
+        <%= link_to 'Edit', edit_teacher_path(@teacher), class: 'btn btn-primary' %>
+        <%= link_to 'Back', teachers_path, class: 'btn btn-secondary' %>
+      </div>
+    </div>
+  </div>
+</div>
