courses controller wip

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-4 offset-4">
     <div class="card" style="width: 100%;">
       <div class="card-header">
-        <center><b><%= "#{@teacher.first_name} #{@teacher.last_name}" %></b></center>
+        <center><b><%= @teacher.full_name %></b></center>
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
