--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,2 +1,26 @@
-<h1>Courses#show</h1>
-<p>Find me in app/views/courses/show.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<div class="row">
+  <div class="col-md-4 offset-4">
+    <div class="card" style="width: 100%;">
+      <div class="card-header">
+        <center><b><%= "#{@course.name}" %></b></center>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          Start Date: <span style="float: right"><%= @course.start_date %></span>
+        </li>
+        <li class="list-group-item">
+          End Date: <span style="float: right"><%= @course.end_date %></span>
+        </li>
+        <li class="list-group-item">
+          Teacher: <span style="float: right"><%= @course.teacher.full_name %></span>
+        </li>
+      </ul>
+      <div class="card-body">
+        <%= link_to 'Edit', edit_course_path(@course), class: 'btn btn-primary' %>
+        <%= link_to 'Back', courses_path, class: 'btn btn-secondary' %>
+      </div>
+    </div>
+  </div>
+</div>
