--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,7 +1,9 @@
 <%= simple_form_for course do |form| %>
   <%= form.input :name %>
-  <%= form.input :start_date %>
-  <%= form.input :end_date %>
+  <%= form.input :start_date, as: :date, start_year: Date.today.year - 100,
+                 end_year: Date.today.year, order: [:day, :month, :year] %>
+  <%= form.input :end_date, as: :date, start_year: Date.today.year - 100,
+                 end_year: Date.today.year, order: [:day, :month, :year] %>
   <%= form.association :teacher, label_method: :full_name %>
   <%= form.button :submit, class: 'btn btn-primary' %>
 <% end %>
