--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4 offset-4">
+  <div class="col-md-6 mx-auto mb-5">
     <%= simple_form_for student do |form| %>
       <%= form.input :first_name %>
       <%= form.input :last_name %>
@@ -7,10 +7,11 @@
       <%= form.input :parents_phone %>
       <%= form.input :email %>
       <%= form.input :gender %>
-      <%= form.input :date_of_birth, as: :date %>
+      <%= form.input :date_of_birth, as: :date, start_year: Date.today.year - 100,
+                     end_year: Date.today.year, order: [:day, :month, :year] %>
       <%= form.input :active, as: :boolean, inline_label: "Active" %>
     
-      <%= form.submit %>
+      <%= form.button :submit, class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
