--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="row">
-  <div class="col-md-4 offset-4">
+  <div class="col-md-4 mx-auto mb-5">
     <div class="card" style="width: 100%;">
       <div class="card-header">
         <center><b><%= "#{@course.name}" %></b></center>
