--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <div class="row">
-  <div class="col-md-4 offset-4">
+  <div class="col-md-4 mx-auto mb-5">
     <div class="card" style="width: 100%;">
       <div class="card-header">
         <center><b><%= "#{@student.first_name} #{@student.last_name}" %></b></center>
