--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,1 +1,35 @@
+
+<h1>Courses</h1>
+
+<table class="table table-dark">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Name</th>
+      <th scope="col">Start date</th>
+      <th scope="col">End date</th>
+      <th scope="col">Teacher Name</th>
+      <th colspan="3"></th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @courses.each do |course| %>
+      <tr>
+        <th scope="row"><%= course.id %></th>
+        <td nowrap><%= course.name %></td>
+        <td nowrap><%= course.start_date %></td>
+        <td nowrap><%= course.end_date %></td>
+        <td nowrap><%= course.teacher.full_name %></td>
+        <td><%= link_to 'Show', course %></td>
+        <td><%= link_to 'Edit', edit_course_path(course) %></td>
+        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
 <%= link_to "New Course", new_course_path, class: "btn btn-outline-primary" %>
