--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+<%= render "alert_message" %>
+
 <div class="row">
   <div class="col-md-4 mx-auto mb-5">
     <div class="card" style="width: 100%;">
