--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,8 +3,8 @@
 <h1>Students</h1>
 
 <div class="table-responsive">
-  <table class="table table-dark">
-    <thead>
+  <table class="table table-hover">
+    <thead class="thead-dark">
       <tr>
         <th scope="col">#</th>
         <th scope="col">First name</th>
