--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Courses</h1>
 <div class="table-responsive">
-  <table class="table table-dark">
-    <thead>
+  <table class="table table-hover">
+    <thead class="thead-dark">
       <tr>
         <th scope="col">#</th>
         <th scope="col">Name</th>
