improve style navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class="row">
+    <div class="row sticky-top">
       <div class="col">
         <%= render "navbar" %>
       </div>
