Finish homework week3

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,7 +1,28 @@
-<%= simple_form_for course do |form| %>
-  <%= form.input :name %>
-  <%= form.input :start_date %>
-  <%= form.input :end_date %>
-  <%= form.association :teacher, label_method: :full_name %>
-  <%= form.button :submit, class: 'btn btn-primary' %>
-<% end %>
+<div class="row">
+  <div class="col-md-4 offset-4">
+    <%= simple_form_for course do |form| %>
+      <% if course.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(course.errors.count, 'error') %> prohibited this course from being saved:</h2>
+          <ul>
+            <% course.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div class="form-group">
+        <%= form.input :name %>
+        <%= form.input :start_date %>
+        <%= form.input :end_date %>
+        <%= form.association :teacher, label_method: :full_name %>
+      </div>
+
+      <div class="actions">
+        <%= form.button :submit, class: "btn btn-primary" %>
+        <%= link_to 'Back', courses_path, class: 'btn btn-secondary' %>
+      </div>
+    <% end %>
+  </div>
+</div>
