--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Students</h1>
 
 <table class="table table-dark">
@@ -30,9 +28,11 @@
         <td><%= student.gender %></td>
         <td><%= student.date_of_birth %></td>
         <td><%= student.active %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Show', student, class: "btn btn-primary" %>
+          <%= link_to 'Edit', edit_student_path(student), class: "btn btn-success" %>
+          <%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+        </td>
       </tr>
     <% end %>
   </tbody>
