--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,7 +1,12 @@
-<%= simple_form_for course do |form| %>
-  <%= form.input :name %>
-  <%= form.input :start_date %>
-  <%= form.input :end_date %>
-  <%= form.association :teacher, label_method: :full_name %>
-  <%= form.button :submit, class: 'btn btn-primary' %>
-<% end %>
+<div class="row">
+  <div class="col-md-4 offset-4">
+    <%= simple_form_for course do |form| %>
+      <%= form.input :name %>
+      <%= form.input :start_date %>
+      <%= form.input :end_date %>
+      <%= form.association :teacher, label_method: :full_name %>
+      <%= form.button :submit, class: 'btn btn-primary' %>
+      <%= link_to 'Back', courses_path, class: 'btn btn-secondary' %>
+    <% end %>
+  </div>
+</div>
