--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,1 +1,39 @@
-<%= link_to "New Course", new_course_path, class: "btn btn-outline-primary" %>
+<div class="row">
+  <div class="col-md-8">
+    <h1>Courses</h1>
+  </div>
+  <div class="col-md-4">
+    <div style="float: right">
+        <%= link_to "Create New Course", new_course_path, class: "btn btn-outline-primary" %>
+    </div>
+  </div>
+</div>
+
+<table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th>#</th>
+      <th>Coure</th>
+      <th>Teach By</th>
+      <th>Start Date</th>
+      <th>End Date</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @courses.each do |course| %>
+      <tr>
+        <td><%= course.id %></td>
+        <td><%= course.name %></td>
+        <td><%= course.teacher_full_name %></td>
+        <td><%= course.start_date.strftime("%d-%b-%Y")%></td>
+        <td><%= course.end_date.strftime("%d-%b-%Y") %></td>
+        <td align="right">
+          <%= link_to 'Show', course, class: 'btn btn-sm btn-success' %>
+          <%= link_to 'Edit', edit_course_path(course), class: 'btn btn-sm btn-primary' %>
+          <%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
