--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
       </div>
       <div class="row">
         <div class="col">
+          <p id="notice"><%= notice %></p>
           <%= yield %>
         </div>
       </div>
