--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,9 +1,16 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-8">
+    <h1>Students</h1>
+  </div>
+  <div class="col-md-4">
+    <div style="float: right">
+      <%= link_to 'Create New Student', new_student_path, class: "btn btn-outline-primary" %>
+    </div>
+  </div>
+</div>
 
-<h1>Students</h1>
-
-<table class="table table-dark">
-  <thead>
+<table class="table">
+  <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
       <th scope="col">First name</th>
@@ -14,7 +21,7 @@
       <th scope="col">Gender</th>
       <th scope="col">Date of birth</th>
       <th scope="col">Active</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -28,16 +35,16 @@
         <td><%= student.parents_phone %></td>
         <td><%= student.email %></td>
         <td><%= student.gender %></td>
-        <td><%= student.date_of_birth %></td>
+        <td><%= student.date_of_birth.strftime("%d-%b-%Y") %></td>
         <td><%= student.active %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td align="right">
+          <%= link_to 'Show', student, class: 'btn btn-sm btn-success' %>
+          <%= link_to 'Edit', edit_student_path(student), class: 'btn btn-sm btn-primary' %>
+          <%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Student', new_student_path, class: "btn btn-outline-primary" %>
