--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 <div class="row">
   <div class="col-md-4 offset-4">
     <div class="card" style="width: 100%;">
@@ -19,7 +18,7 @@
           Gender: <span style="float: right"><%= @student.gender %></span>
         </li>
         <li class="list-group-item">
-          Date of birth: <span style="float: right"><%= @student.date_of_birth %></span>
+          Date of birth: <span style="float: right"><%= @student.date_of_birth.strftime("%d-%b-%Y") %></span>
         </li>
         <li class="list-group-item">
           Active: <span style="float: right"><%= @student.active %></span>
