--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,9 +1,16 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-8">
+    <h1>Teachers</h1>
+  </div>
+  <div class="col-md-4">
+    <div style="float: right">
+      <%= link_to 'Create New Teacher', new_teacher_path, class: "btn btn-outline-primary" %>
+    </div>
+  </div>
+</div>
 
-<h1>Teachers</h1>
-
-<table class="table table-dark">
-  <thead>
+<table class="table">
+  <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
       <th scope="col">First name</th>
@@ -12,7 +19,7 @@
       <th scope="col">Email</th>
       <th scope="col">Gender</th>
       <th scope="col">Date of birth</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -26,14 +33,12 @@
         <td><%= teacher.email %></td>
         <td><%= teacher.gender %></td>
         <td><%= teacher.date_of_birth %></td>
-        <td><%= link_to 'Show', teacher %></td>
-        <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
-        <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td align="right">
+          <%= link_to 'Show', teacher, class: 'btn btn-sm btn-success' %>
+          <%= link_to 'Edit', edit_teacher_path(teacher), class: 'btn btn-sm btn-primary' %>
+          <%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Teacher', new_teacher_path, class: "btn btn-outline-primary" %>
