--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,1 +1,40 @@
+<h1>Courses</h1>
+
+<div class="row">
+  <div class="col-12">
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Start date</th>
+            <th>End date</th>
+            <th>Teacher</th>
+            <th colspan="3"></ht>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @courses.each do |course| %>
+            <tr>
+              <th><%= course.id %></th>
+              <td><%= course.name %></td>
+              <td><%= course.start_date %></td>
+              <td><%= course.end_date %></td>
+              <td><%= course.teacher.full_name %></td>
+              <td>
+                <%= link_to 'Show', course, class: "btn btn-primary" %>
+                <%= link_to 'Edit', edit_course_path(course), class: "btn btn-success" %>
+                <%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are your sure?' }, class: "btn btn-danger" %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+<br>
+
 <%= link_to "New Course", new_course_path, class: "btn btn-outline-primary" %>
