--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,43 +1,47 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Students</h1>
+<div class="row">
+  <div class="col-12">
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First name</th>
+            <th scope="col">Last name</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Parents Phone</th>
+            <th scope="col">Email</th>
+            <th scope="col">Gender</th>
+            <th scope="col">Date of birth</th>
+            <th scope="col">Active</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-<table class="table table-dark">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First name</th>
-      <th scope="col">Last name</th>
-      <th scope="col">Phone</th>
-      <th scope="col">Parents Phone</th>
-      <th scope="col">Email</th>
-      <th scope="col">Gender</th>
-      <th scope="col">Date of birth</th>
-      <th scope="col">Active</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @students.each do |student| %>
-      <tr>
-        <th scope="row"><%= student.id %></th>
-        <td><%= student.first_name %></td>
-        <td><%= student.last_name %></td>
-        <td><%= student.phone %></td>
-        <td><%= student.parents_phone %></td>
-        <td><%= student.email %></td>
-        <td><%= student.gender %></td>
-        <td><%= student.date_of_birth %></td>
-        <td><%= student.active %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+        <tbody>
+          <% @students.each do |student| %>
+            <tr>
+              <th scope="row"><%= student.id %></th>
+              <td><%= student.first_name %></td>
+              <td><%= student.last_name %></td>
+              <td><%= student.phone %></td>
+              <td><%= student.parents_phone %></td>
+              <td><%= student.email %></td>
+              <td><%= student.gender %></td>
+              <td><%= student.date_of_birth %></td>
+              <td><%= student.active %></td>
+              <td>
+                <%= link_to 'Show', student, class: "btn btn-primary" %>
+                <%= link_to 'Edit', edit_student_path(student), class: "btn btn-success" %>
+                <%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </dibv>
+  </div>
+</div>
 <br>
 
 <%= link_to 'New Student', new_student_path, class: "btn btn-outline-primary" %>
