remove element center replace by class text-center

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -3,8 +3,8 @@
 <div class="row">
   <div class="col-md-4 offset-4">
     <div class="card" style="width: 100%;">
-      <div class="card-header">
-        <center><b><%= @teacher.full_name %></b></center>
+      <div class="card-header text-center">
+        <b><%= @teacher.full_name %></b>
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
