--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -3,8 +3,8 @@
 <div class="row">
   <div class="col-md-4 mx-auto mb-5">
     <div class="card" style="width: 100%;">
-      <div class="card-header">
-        <center><b><%= "#{@student.first_name} #{@student.last_name}" %></b></center>
+      <div class="card-header text-center">
+        <b><%= "#{@student.first_name} #{@student.last_name}" %></b>
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
