--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -17,6 +17,7 @@
         <%= form.input :start_date %>
         <%= form.input :end_date %>
         <%= form.association :teacher, label_method: :full_name %>
+        <%= form.input :max_students %>
       </div>
 
       <div class="actions">
