--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -14,10 +14,14 @@
         <li class="list-group-item">
           Teacher: <span style="float: right"><%= @course.teacher.full_name %></span>
         </li>
+        <li class="list-group-item">
+          Maximum Students: <span style="float: right"><%= @course.max_students %></span>
+        </li>
       </ul>
       <div class="card-body">
         <%= link_to 'Edit', edit_course_path(@course), class: 'btn btn-primary' %>
         <%= link_to 'Back', courses_path, class: 'btn btn-secondary' %>
+        <%= link_to 'Students', course_students_path(@course), class: 'btn btn-success' %>
       </div>
     </div>
   </div>
