[Finish]: lyden week 4

--- a/app/views/application/_notice.html.erb
+++ b/app/views/application/_notice.html.erb
@@ -1,5 +1,8 @@
-<% if notice %>
-  <p id="notice" class="alert alert-success">
-    <%= notice %>
-  </p>
+<% if flash[:error] || flash[:notice] %>
+  <div class="alert alert-<%= flash[:error].present? ? 'danger' : 'success' %> alert-dismissible fade show" role="alert">
+    <%= flash[:error] || flash[:notice] %>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 <% end %>
