--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -16,6 +16,7 @@
         <%= form.input :name %>
         <%= form.input :start_date %>
         <%= form.input :end_date %>
+        <%= form.input :max_students %>
         <%= form.association :teacher, label_method: :full_name %>
       </div>
 
