--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -35,6 +35,7 @@
           <%= link_to 'Show', course, class: "btn btn-primary" %>
           <%= link_to 'Edit', edit_course_path(course), class: "btn btn-success" %>
           <%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are your sure?' }, class: "btn btn-danger" %>
+          <%#= link_to 'Register', new_enrolment_path(course_id: course.id), class: "btn btn-primary" %>
         </td>
       </tr>
     <% end %>
