--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -14,11 +14,32 @@
         <li class="list-group-item">
           Teacher: <span style="float: right"><%= @course.teacher.full_name %></span>
         </li>
+        <li class="list-group-item">
+          Max Students: <span style="float: right"><%= @course.max_students %></span>
+        </li>
       </ul>
       <div class="card-body">
         <%= link_to 'Edit', edit_course_path(@course), class: 'btn btn-primary' %>
         <%= link_to 'Back', courses_path, class: 'btn btn-secondary' %>
       </div>
+    </div>
+  </div>
+</div>
+
+<br>
+<div class="row">
+  <div class="col-md-4 offset-4">
+    <div class="card" style="width: 100%;">
+      <div class="card-header">
+        <center><b>Registered Students</b></center>
+      </div>
+      <ul class="list-group list-group-flush">
+        <% @course.students.each do |student| %>
+          <li class="list-group-item">
+            <%= student.full_name %>
+          </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </div>
