--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -32,6 +32,7 @@
           <%= link_to 'Show', student, class: "btn btn-primary" %>
           <%= link_to 'Edit', edit_student_path(student), class: "btn btn-success" %>
           <%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+          <%= link_to 'Course Registeration', new_enrolment_path(student_id: student.id), class: "btn btn-primary" %>
         </td>
       </tr>
     <% end %>
