--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -14,6 +14,7 @@
 
       <div class="form-group">
         <%= form.input :name %>
+        <%= form.input :max_students %>
         <%= form.input :start_date %>
         <%= form.input :end_date %>
         <%= form.association :teacher, label_method: :full_name %>
