--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -29,6 +29,7 @@
         <td><%= student.date_of_birth %></td>
         <td><%= student.active %></td>
         <td>
+          <%= link_to 'Register Course', new_enrolment_path(student_id: student.id), class: "btn btn-info" %>
           <%= link_to 'Show', student, class: "btn btn-primary" %>
           <%= link_to 'Edit', edit_student_path(student), class: "btn btn-success" %>
           <%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
