--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -14,6 +14,16 @@
         <li class="list-group-item">
           Teacher: <span style="float: right"><%= @course.teacher.full_name %></span>
         </li>
+        <li class="list-group-item">
+          List of students:
+        </li>
+         <% @course.students %>
+          <% @course.students.each do |student| %>
+            <li class='list-group-item'>
+              <%= student.full_name %>
+            </li>
+          <% end %>
+        </li>
       </ul>
       <div class="card-body">
         <%= link_to 'Edit', edit_course_path(@course), class: 'btn btn-primary' %>
