home work week 4 finish

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,7 @@
- @import "bootstrap";
+@import 'bootstrap';
+
+.student-action-btn {
+  display: block;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
