--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,3 @@
-@import 'bootstrap';
-
-.student-action-btn {
-  display: block;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
+@import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
