--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,7 +3,7 @@
   <h4><%= @student.full_name %></h4>
 <% end %>
 
-<h1>Courses</h1>
+<%= render "index_title", entity: "Course", path: new_course_path %>
 
 <table class="table table-dark">
   <thead>
@@ -41,6 +41,4 @@
   </tbody>
 </table>
 
-<br>
-
-<%= link_to "New Course", new_course_path, class: "btn btn-outline-primary" %>
+<%= render "pagination", records: @courses %>
