--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,44 +1,33 @@
-<h1>Students</h1>
+<%= render "index_title", entity: "Student", path: new_student_path %>
 
-<table class="table table-dark">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col" >First name</th>
-      <th scope="col">Last name</th>
-      <th scope="col">Phone</th>
-      <th scope="col">Parents Phone</th>
-      <th scope="col">Email</th>
-      <th scope="col">Gender</th>
-      <th scope="col">Date of birth</th>
-      <th scope="col">Active</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="table-responsive">
+  <table class="table table-hover">
+    <%= render "table_header",
+      headers: ["#", "First name", "Last name", "Phone", "Parents Phone", "Email", "Gender", "Date of Birth", "Active"],
+      colspan: 3 %>
 
-  <tbody>
-    <% @students.each do |student| %>
-      <tr>
-        <th scope="row"><%= student.id %></th>
-        <td><%= student.first_name %></td>
-        <td><%= student.last_name %></td>
-        <td><%= student.phone %></td>
-        <td><%= student.parents_phone %></td>
-        <td><%= student.email %></td>
-        <td><%= student.gender %></td>
-        <td><%= student.date_of_birth %></td>
-        <td><%= student.active %></td>
-        <td>
-          <%= link_to 'Show', student, class: "btn btn-primary student-action-btn" %>
-          <%= link_to 'Edit', edit_student_path(student), class: "btn btn-success student-action-btn" %>
-          <%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger student-action-btn" %>
-          <%= link_to 'Course Registeration', new_enrolment_path(student_id: student.id), class: "btn btn-info student-action-btn" %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <tbody>
+      <% @students.each do |student| %>
+        <tr>
+          <th scope="row"><%= student.id %></th>
+          <td><%= student.first_name %></td>
+          <td><%= student.last_name %></td>
+          <td><%= student.phone %></td>
+          <td><%= student.parents_phone %></td>
+          <td><%= student.email %></td>
+          <td><%= student.gender %></td>
+          <td><%= student.date_of_birth %></td>
+          <td><%= student.active %></td>
+          <td>
+            <%= link_to 'Show', student, class: "btn btn-primary student-action-btn" %>
+            <%= link_to 'Edit', edit_student_path(student), class: "btn btn-success student-action-btn" %>
+            <%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger student-action-btn" %>
+            <%= link_to 'Course Registeration', new_enrolment_path(student_id: student.id), class: "btn btn-info student-action-btn" %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
-<br>
-
-<%= link_to 'New Student', new_student_path, class: "btn btn-outline-primary" %>
+<%= render "pagination", records: @students %>
