--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,39 +1,30 @@
-<h1>Teachers</h1>
+<%= render "index_title", entity: "Teacher", path: new_teacher_path %>
 
-<table class="table table-dark">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First name</th>
-      <th scope="col">Last name</th>
-      <th scope="col">Phone</th>
-      <th scope="col">Email</th>
-      <th scope="col">Gender</th>
-      <th scope="col">Date of birth</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="table-responsive">
+  <table class="table table-hover">
+    <%= render "table_header",
+      headers: ["#", "First name", "Last name", "Phone", "Email", "Gender", "Date of Birth"],
+      colspan: 3 %>
 
-  <tbody>
-    <% @teachers.each do |teacher| %>
-      <tr>
-        <th scope="row"><%= teacher.id %></th>
-        <td><%= teacher.first_name %></td>
-        <td><%= teacher.last_name %></td>
-        <td><%= teacher.phone %></td>
-        <td><%= teacher.email %></td>
-        <td><%= teacher.gender %></td>
-        <td><%= teacher.date_of_birth %></td>
-        <td>
-          <%= link_to 'Show', teacher, class: "btn btn-primary" %>
-          <%= link_to 'Edit', edit_teacher_path(teacher), class: "btn btn-success" %>
-          <%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <tbody>
+      <% @teachers.each do |teacher| %>
+        <tr>
+          <th scope="row"><%= teacher.id %></th>
+          <td><%= teacher.first_name %></td>
+          <td><%= teacher.last_name %></td>
+          <td><%= teacher.phone %></td>
+          <td><%= teacher.email %></td>
+          <td><%= teacher.gender %></td>
+          <td><%= teacher.date_of_birth %></td>
+          <td>
+            <%= link_to_icon teacher, icon: "info", type: "info" %>
+            <%= link_to_icon edit_teacher_path(teacher), icon: "edit", type: "info" %>
+            <%= link_to_icon teacher, icon: "trash-alt", type: "danger", method: :delete, data: { confirm: "Are you sure?" } %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
-<br>
-
-<%= link_to 'New Teacher', new_teacher_path, class: "btn btn-outline-primary" %>
+<%= render "pagination", records: @teachers %>
